[package]
name = "sileno"
version = "0.1.0"
authors = ["Isaac Clayton <slightknack@gmail.com>"]
edition = "2018"

[dependencies]
# gui
iced = "0.2"
iced_native = "0.3"

# crypto
rand_core = { version = "0.5", features = ["getrandom"] }
k256 = { version = "0.7", features = ["zeroize", "arithmetic", "ecdh"] }
chacha20poly1305 = { version = "0.7", features = ["default"] }
hkdf = "0.10"
sha2 = "0.9"

# data exchange
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15.0"

# TODO: kitbag, passerine, data-defined-datatypes (ddd)
